--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Angular Websocket</title>
+  <title>Vengeance Chat</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
+  <meta content="width=device-width, initial-scale=1" name="viewport">
+  <link href="assets/icons/chat.ico" sizes="64x64" rel="icon" type="image/x-icon">
+<!--  <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>-->
 </head>
 <body>
 <app-root></app-root>
