add oauth authentication use hash routing

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Vengeance Chat</title>
+  <title>Kappa Talk</title>
   <base href="/">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="assets/icons/chat.ico" sizes="64x64" rel="icon" type="image/x-icon">
